# tiny-pdf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: mainwindow.hpp
src/: main.cpp  mainwindow.cpp  mainwindow.ui
